dataset/local/df_validate_healthcheck/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: HEALTHCHECK
        SubCmd: "CMD"
        CmdLine:
          - "curl --fail http://localhost:80 || exit 1"
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: CMD
        CmdLine:
          - "node app.js"
        PrependShell: false
